--- a/.env.example
+++ b/.env.example
@@ -35,3 +35,5 @@ DATABASE_URL=postgresql://user:password@db:5432/database
 
 # Nextjs collects completely anonymous telemetry data, so disable it
 NEXT_TELEMETRY_DISABLED=1
+
+GROQ_API_KEY=your_groq_api_key
