--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,8 @@ DATABASE_URL=postgresql://user:password@db:5432/database
 NEXT_TELEMETRY_DISABLED=1
 
 GROQ_API_KEY=your_groq_api_key
+NEWS_API_ORG_KEY=1234567890
+ELEVENLABS_API_KEY=1234567890
+
+CLOUDFLARE_ACCOUNT_ID=your_account_id
+CLOUDFLARE_API_TOKEN=your_api_token
