--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.36.3",
+    "elevenlabs": "^0.18.1",
     "framer-motion": "^11.13.1",
+    "groq-sdk": "^0.9.0",
     "lucide-react": "^0.378.0",
     "next": "^15.0.3",
     "next-auth": "^4.24.10",
