fix: deployement issues

--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,5 @@ ELEVENLABS_API_KEY=1234567890
 
 CLOUDFLARE_ACCOUNT_ID=your_account_id
 CLOUDFLARE_API_TOKEN=your_api_token
+
+HUGGINGFACE_API_TOKEN=your_huggingface_api_token
