--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@ai-sdk/groq": "^1.0.6",
     "@auth/drizzle-adapter": "^0.7.0",
+    "@gradio/client": "^1.8.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
