--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@shadcn/ui": "^0.0.4",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/postcss": "^4.0.0-beta.3",
@@ -70,6 +71,7 @@
     "react-dom": "^19.0.0",
     "react-wrap-balancer": "^1.1.1",
     "server-only": "^0.0.1",
+    "shadcn": "^2.1.6",
     "sonner": "^1.7.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.5",
