--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "sonner": "^1.7.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.5",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^4.0.0-beta.3",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.1",
